Add hover attributes

--- a/index.html
+++ b/index.html
@@ -7,13 +7,41 @@
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-
-  <!-- This <div> is just so each button will be on its own line -->
   <div>
-    <a class="btn" href="#">Primary button</a>
+    <a class="btn" href="#primary-button">Primary button</a>
   </div>
-
-  <!-- Add all other button styles here with both the <div> & <a> tags -->
-
+  <div>
+    <a class="btn-subtle" href="#subtle-button">Subtle button</a>
+  </div>
+  <div>
+    <a class="btn-ghost" href="#ghost-button">Ghost button</a>
+  </div>
+  <div>
+    <a class="btn-warning" href="#warning-button">Warning button</a>
+  </div>
+  <div>
+    <a class="btn-small" href="#primary-button-small">Primary button small</a>
+  </div>
+  <div>
+    <a class="btn-subtle-small" href="#subtle-button-small">Subtle button small</a>
+  </div>
+  <div>
+    <a class="btn-ghost-small" href="#ghost-button-small">Ghost button small</a>
+  </div>
+  <div>
+    <a class="btn-warning-small" href="#warning-button-small">Warning button small</a>
+  </div>
+  <div>
+    <a class="btn-big" href="#primary-button-big">Primary button big</a>
+  </div>
+  <div>
+    <a class="btn-subtle-big" href="#subtle-button-big">Subtle button big</a>
+  </div>
+  <div>
+    <a class="btn-ghost-big" href="#ghost-button-big">Ghost button big</a>
+  </div>
+  <div>
+    <a class="btn-warning-big" href="#warning-button-big">Warning button big</a>
+  </div>
 </body>
 </html>
