Fix required properties

--- a/index.html
+++ b/index.html
@@ -11,37 +11,37 @@
     <a class="btn" href="#primary-button">Primary button</a>
   </div>
   <div>
-    <a class="btn-subtle" href="#subtle-button">Subtle button</a>
+    <a class="btn" class="subtle" href="#subtle-button">Subtle button</a>
   </div>
   <div>
-    <a class="btn-ghost" href="#ghost-button">Ghost button</a>
+    <a class="btn" class="ghost" href="#ghost-button">Ghost button</a>
   </div>
   <div>
-    <a class="btn-warning" href="#warning-button">Warning button</a>
+    <a class="btn" class="warning" href="#warning-button">Warning button</a>
   </div>
   <div>
-    <a class="btn-small" href="#primary-button-small">Primary button small</a>
+    <a class="smallbtn" href="#primary-button-small">Primary button small</a>
   </div>
   <div>
-    <a class="btn-subtle-small" href="#subtle-button-small">Subtle button small</a>
+    <a class="smallbtn" class="subtle" href="#subtle-button-small">Subtle button small</a>
   </div>
   <div>
-    <a class="btn-ghost-small" href="#ghost-button-small">Ghost button small</a>
+    <a class="smallbtn" class="ghost" href="#ghost-button-small">Ghost button small</a>
   </div>
   <div>
-    <a class="btn-warning-small" href="#warning-button-small">Warning button small</a>
+    <a class="smallbtn" class="warning" href="#warning-button-small">Warning button small</a>
   </div>
   <div>
-    <a class="btn-big" href="#primary-button-big">Primary button big</a>
+    <a class="bigbtn" href="#primary-button-big">Primary button big</a>
   </div>
   <div>
-    <a class="btn-subtle-big" href="#subtle-button-big">Subtle button big</a>
+    <a class="bigbtn" class="subtle" href="#subtle-button-big">Subtle button big</a>
   </div>
   <div>
-    <a class="btn-ghost-big" href="#ghost-button-big">Ghost button big</a>
+    <a class="bigbtn" class="ghost" href="#ghost-button-big">Ghost button big</a>
   </div>
   <div>
-    <a class="btn-warning-big" href="#warning-button-big">Warning button big</a>
+    <a class="bigbtn" class="warning" href="#warning-button-big">Warning button big</a>
   </div>
 </body>
 </html>
