Fix button styles

--- a/index.html
+++ b/index.html
@@ -23,25 +23,25 @@
     <a class="btn-small" href="#primary-button-small">Primary button small</a>
   </div>
   <div>
-    <a class="btn-subtle-small" href="#subtle-button-small">Subtle button small</a>
+    <a class="btn-subtle btn-small" href="#subtle-button-small">Subtle button small</a>
   </div>
   <div>
-    <a class="btn-ghost-small" href="#ghost-button-small">Ghost button small</a>
+    <a class="btn-ghost btn-small" href="#ghost-button-small">Ghost button small</a>
   </div>
   <div>
-    <a class="btn-warning-small" href="#warning-button-small">Warning button small</a>
+    <a class="btn-warning btn-small" href="#warning-button-small">Warning button small</a>
   </div>
   <div>
     <a class="btn-big" href="#primary-button-big">Primary button big</a>
   </div>
   <div>
-    <a class="btn-subtle-big" href="#subtle-button-big">Subtle button big</a>
+    <a class="btn-subtle btn-big" href="#subtle-button-big">Subtle button big</a>
   </div>
   <div>
-    <a class="btn-ghost-big" href="#ghost-button-big">Ghost button big</a>
+    <a class="btn-ghost btn-big" href="#ghost-button-big">Ghost button big</a>
   </div>
   <div>
-    <a class="btn-warning-big" href="#warning-button-big">Warning button big</a>
+    <a class="btn-warning btn-big" href="#warning-button-big">Warning button big</a>
   </div>
 </body>
 </html>
