--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
     <a class="btn" href="#primary-button">Primary button</a>
   </div>
   <div>
-    <a class="btn-subtle" href="#subtle-button">Subtle button</a>
+    <a class="btn-subtle btn" href="#subtle-button">Subtle button</a>
   </div>
   <div>
-    <a class="btn-ghost" href="#ghost-button">Ghost button</a>
+    <a class="btn-ghost btn" href="#ghost-button">Ghost button</a>
   </div>
   <div>
-    <a class="btn-warning" href="#warning-button">Warning button</a>
+    <a class="btn-warning btn" href="#warning-button">Warning button</a>
   </div>
   <div>
-    <a class="btn-small" href="#primary-button-small">Primary button small</a>
+    <a class="btn-small btn" href="#primary-button-small">Primary button small</a>
   </div>
   <div>
     <a class="btn-subtle btn-small" href="#subtle-button-small">Subtle button small</a>
@@ -32,7 +32,7 @@
     <a class="btn-warning btn-small" href="#warning-button-small">Warning button small</a>
   </div>
   <div>
-    <a class="btn-big" href="#primary-button-big">Primary button big</a>
+    <a class="btn-big btn" href="#primary-button-big">Primary button big</a>
   </div>
   <div>
     <a class="btn-subtle btn-big" href="#subtle-button-big">Subtle button big</a>
