Fix ghost button

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <a class="btn-subtle btn" href="#subtle-button">Subtle button</a>
   </div>
   <div>
-    <a class="btn-ghost btn" href="#ghost-button">Ghost button</a>
+    <a class="btn-ghost btn ghost" href="#ghost-button">Ghost button</a>
   </div>
   <div>
     <a class="btn-warning btn" href="#warning-button">Warning button</a>
